--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ maps.api.key=AIzaSyAXLbGTbu75c6W8mKXtmEA3m3oB6ew9Ddc
 maps.api.url=https://maps.googleapis.com/maps/api/staticmap?maptype=roadmap&center=
 logging.level.org.springframework.web=DEBUG
 logging.level.com.mkyong=DEBUG
-logging.file=/application.log
+logging.file=logs/application.log
 # Logging pattern for the console
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
